[package]
name = "go-server-rust-sdk"
version = "0.1.0"
edition = "2021"
authors = ["enols<2575169674@qq.com>"]
description = "Rust SDK for go-server distributed task scheduler"
license = "MIT"
repository = "https://github.com/go-enols/go-server"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.4"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "worker"
path = "examples/worker.rs"

[[example]]
name = "scheduler"
path = "examples/scheduler.rs"